# wttp

./: .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  build.sh  setup.sh  shell.nix
src/: main.c
src/cli/: fs.c  fs.h  logging.c  main.c
src/gui/: http_thread.c  http_thread.h  logging.c  logging.h  main.c
src/include/: bsd_sockets.h  common.h  file_request_handler.h  http.h  initialize.h  listeners.h  mime.h  server.h  types.h
src/include/generic/: hashmap.h  option.h  result.h  vector.h
src/lib/: CMakeLists.txt  file_request_handler.c  http.c  initialize.c  mime.c  random.c  random.h  server.c  uri.c  uri.h
src/lib/listeners/: recv_utils.h  st_bsd.c  st_iouring.c  st_iouring.h
